--- a/index.html
+++ b/index.html
@@ -2,49 +2,61 @@
 <html ng-app="MyApp">
 <head lang="en">
     <meta charset="UTF-8">
-    <link href="css/bootstrap-theme.css" rel="stylesheet" />
-    <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="https://bootswatch.com/simplex/bootstrap.min.css" rel="stylesheet" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
     <script src="https://code.angularjs.org/1.2.5/angular-resource.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script type="text/javascript" src="js/test.js"></script>
+
     <title></title>
 </head>
 
 <body class="row"ng-controller="Test">
-<div class="col-xs-4" >
-    <div class="panel panel-success" >        <div class="panel-heading">            <h3>Установка</h3>        </div>
-        <div class="panel-body" >
-            <form name="myForm" novalidate ng-submit="addNewUser(newUser)">
-                <label>Name:</label>
-                <select class="form-control" ng-model="user.name">
-                    <option ng-repeat="human in humans">{{human}}</option>
-                </select>
-            <div class="checkbox" ng-repeat="exampleType in exampleTypes">
-                <label><input type="checkbox" ng-model="exampleType.checked"> {{exampleType}}</label>
-            </div>
-            <button class="btn btn-success" ng-click="setAddress('billingZip', billingZip)">
-                Перейти до тестування
-            </button>
-            </form>
-        </div>
-    </div>
-</div>
-<div class="col-xs-8">
-    <div class="panel panel-success">
-        <div class="panel-heading"><h3>{{user.name}}</h3></div>
-        <div class="panel-body">
-            <div class="form-group">
-                <input class="form-control" ng-model="shippingZip" />
-            </div>
-            <button class="btn btn-success" ng-click="copyAddress()">
-                Use Billing
-            </button>
-            <button class="btn btn-success" ng-click="setAddress('shippingZip', shippingZip)">
-                Save Shipping
-            </button>
-        </div>
-    </div>
-</div>
 
+<div class="container" >
+    <div class="panel panel-info" >
+        <div class="panel-heading"><h2 class="panel-title">Перевірка знань з арифметики</h2></div>
+        <div class="panel-body" >
+            <tabset>
+                <tab heading="Налаштування" active="tabs[0].active" disabled="tabs[0].disabled" >
+                    <form name="myForm" novalidate ng-submit="runTest()">
+                        <h4>Оберіть себе зі списку:</h4>
+                        <select class="form-control" ng-model="examinedHuman" ng-options="human.name for human in humans"ng-change="change(examinedHuman)"></select>
+                        <h4>Відмітьте типи арифметичних завдань:</h4>
+                        <div class="checkbox" ng-repeat="exampleType in exampleTypes">
+                            <label><input type="checkbox" ng-model="exampleType.val"/> {{exampleType.label}}</label>
+                        </div>
+                        <button popover-placement="right" popover="Увага! У тебе буде лише хвилина!" popover-trigger="mouseenter" type="submit" class="btn btn-info" ng-disabled ="!checkedTypes.length">
+                            Перейти до тестування
+                        </button>
+                    </form>
+                </tab>
+                <tab heading="Перевірка" active="tabs[1].active" disabled="tabs[1].disabled"><h3>{{examinedHuman.name}}, у тебе залишилось {{timer}} секунд</h3>
+                    <progressbar max="60" value="timer"></progressbar>
+                    <form name="myForm" novalidate ng-submit="results()">
+                         <table class="table">
+                             <thead><tr><th>№</th><th>Тип</th><th>Завдання</th><th>Відповідь</th><th ng-show="endOfTest">Правильна відповідь</th></tr></thead>
+                             <tr ng-repeat="task in tasks" ng-class-even="'info'" >
+                                <td>{{$index+1}}</td>
+                                <td>{{task.type}}</td>
+                                <td><h4>{{task.arg1}} {{task.todo}} {{task.arg2}} =</h4></td>
+                                <td><div class="form-group "><input type="text" ng-readonly="endOfTest" class="form-control" ng-pattern="pattern" ng-maxlength="3" ng-model="task.userAnswer"/></div>
+                                </td>
+                                <td ng-show="endOfTest"><a class = "btn btn-default btn-block" ng-class="task.mistake">{{task.answer}}</a></td>
+                             </tr>
+                         </table>
+                         <button type="submit" class="btn btn-info" ng-disabled="endOfTest">Готово</button>
+                    </form>
+                </tab>
+            </tabset>
+        </div>
+    </div>
+    <div class="panel panel-danger" ng-show="endOfTest">
+        <div class="panel-heading"><h3 class="panel-title">JSON для відправки (не завершено!)</h3></div>
+        <div class="panel-body" > {{userResults}}</div>
+    </div>
+
+</div>
 </body>
 </html>
